# auto-intro-detecor

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
